examples/image-rs-input/src/snapshots/rusty_image_rs_input__codecs__tests__read_gif_headers.snap
---
source: examples/image-rs-input/src/codecs.rs
expression: animation_info
---
AnimationInfo {
    width: 815,
    height: 854,
    frame_timings: {
        0.0: 0,
        0.04: 1,
        0.08: 2,
        0.12: 3,
        0.16: 4,
        0.19999999: 5,
        0.23999998: 6,
        0.27999997: 7,
        0.31999996: 8,
        0.35999995: 9,
        0.39999995: 10,
        0.43999994: 11,
        0.47999993: 12,
        0.5199999: 13,
        0.55999994: 14,
        0.59999996: 15,
        0.64: 16,
        0.68: 17,
        0.72: 18,
        0.76000005: 19,
        0.8000001: 20,
        0.8400001: 21,
        0.8800001: 22,
        0.92000014: 23,
        0.96000016: 24,
        1.0000001: 25,
        1.0400001: 26,
        1.08: 27,
        1.12: 28,
        1.16: 29,
        1.1999999: 30,
        1.2399999: 31,
        1.2799999: 32,
        1.3199998: 33,
        1.3599998: 34,
        1.3999997: 35,
        1.4399997: 36,
        1.4799997: 37,
        1.5199996: 38,
        1.5599996: 39,
        1.5999995: 40,
        1.6399995: 41,
        1.6799995: 42,
        1.7199994: 43,
        1.7599994: 44,
        1.7999994: 45,
        1.8399993: 46,
        1.8799993: 47,
        1.9199992: 48,
        1.9599992: 49,
        1.9999992: 50,
        2.0399992: 51,
        2.0799992: 52,
        2.1199992: 53,
        2.1599991: 54,
        2.199999: 55,
        2.239999: 56,
        2.279999: 57,
        2.319999: 58,
        2.359999: 59,
        2.399999: 60,
        2.4399989: 61,
        2.4799988: 62,
        2.5199988: 63,
        2.5599988: 64,
        2.5999987: 65,
        2.6399987: 66,
        2.6799986: 67,
        2.7199986: 68,
        2.7599986: 69,
        2.7999985: 70,
        2.8399985: 71,
        2.8799984: 72,
        2.9199984: 73,
        2.9599984: 74,
        2.9999983: 75,
        3.0399983: 76,
        3.0799983: 77,
        3.1199982: 78,
        3.1599982: 79,
        3.1999981: 80,
        3.239998: 81,
        3.279998: 82,
        3.319998: 83,
        3.359998: 84,
        3.399998: 85,
        3.439998: 86,
        3.4799979: 87,
        3.5199978: 88,
        3.5599978: 89,
        3.5999978: 90,
        3.6399977: 91,
        3.6799977: 92,
        3.7199976: 93,
        3.7599976: 94,
        3.7999976: 95,
        3.8399975: 96,
        3.8799975: 97,
        3.9199975: 98,
        3.9599974: 99,
        3.9999974: 100,
    },
    length_in_seconds: 3.9999974,
}
