examples/image-rs-input/src/snapshots/rusty_image_rs_input__codecs__tests__read_static_lossless_webp_headers.snap
---
source: examples/image-rs-input/src/codecs.rs
expression: animation_info
---
AnimationInfo {
    width: 815,
    height: 854,
    frame_timings: {},
    length_in_seconds: 0.0,
}
