examples/image-rs-input/src/snapshots/rusty_image_rs_input__codecs__tests__read_static_webp_headers.snap
---
source: examples/image-rs-input/src/codecs.rs
expression: animation_info
---
AnimationInfo {
    width: 1000,
    height: 1000,
    frame_timings: {},
    length_in_seconds: 0.0,
}
